Fixed spacing issues in occupation options

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -19,6 +19,14 @@ $primary: #5596e6;
   }
 }
 
+.btn-group-xs > .btn,
+.btn-xs {
+  padding: 0.6rem 0.6rem;
+  font-size: 0.8rem;
+  line-height: 1;
+  border-radius: 0.2rem;
+}
+
 body {
   background-color: #f5f5f5;
 }
@@ -98,11 +106,12 @@ p {
 }
 
 .explore-header {
-  background: rgb(90, 167, 0);
+  background: rgb(124, 199, 255);
   background: linear-gradient(
-    0deg,
-    rgba(90, 167, 0, 1) 44%,
-    rgba(140, 210, 17, 1) 91%
+    180deg,
+    rgba(124, 199, 255, 1) 20%,
+    rgba(90, 170, 250, 1) 59%,
+    rgba(85, 150, 230, 1) 91%
   );
   // background-image: url("./assets/explore-header.png");
   // background-color: #e43f54;
@@ -116,7 +125,7 @@ p {
   display: block;
   height: 1px;
   border: 0;
-  border-top: 1px solid #ccc;
+  border-top: 1px solid #fff;
   margin: 1em 0;
   padding: 0;
 }
